# homework-6

./: README.md  pyproject.toml
config/: schema.py  settings.py  urls.py
inventory/: models.py  permissions.py  serializers.py  urls.py  views.py
users/: models.py  serializers.py
